src/objects/Training__c.object
<CustomObject>
    <description>Training object for consumer.  Contains training module information and training tracking information.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assortment__c</fullName>
        <description>Training family</description>
        <label>Assortment</label>
        <picklist>
            <picklistValues>
                <fullName>Bulk Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabot Stains</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Masters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Aerosols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features &amp; Effects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pascol Paving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodcare</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Training Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <recordTypes>
        <fullName>Valspar_Master_Training_Record_Type</fullName>
        <active>true</active>
        <label>Valspar Master Training Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>